--- a/code.html
+++ b/code.html
@@ -14,6 +14,12 @@
         </div>
         <div class="redbox">
             <input type="text">
+            <div class="button">
+                <button class="leftbutton"><<</button>
+                <h2>0</h2>
+                <button class="rightbutton">>></button>
+            </div>
+            
         </div>
     </div>
 </body>
