--- a/code.html
+++ b/code.html
@@ -20,10 +20,12 @@
                 <button class="rightbutton" id="left">>></button>
             </div>
             <div class="reminder-input">
-                <div><input class="new-reminder" id="userinput" type="text"></div>
-                <div><button class="submit" id="addnew">Add</button></div>
+                <div><input class="new-reminder" id="user-input" type="text"></div>
+                <div><button class="submit" id="add-new">Add</button></div>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
