--- a/code.html
+++ b/code.html
@@ -10,14 +10,14 @@
     <div class="outer-container">
         <div class="dropdown"></div>
         <div class="appname">
-            <h1>RemindMe™</h1>
+            <h1>RemindME™</h1>
         </div>
         <div class="redbox">
             <div class="display" id="display-div">Enter a Reminder</div>
             <div class="button">
-                <button class="leftbutton" id="right"><<</button>
+                <button class="leftbutton" id="right"><b><<</b></button>
                 <h2 id="reminder-number">0</h2>
-                <button class="rightbutton" id="left">>></button>
+                <button class="rightbutton" id="left"><b>>></b></button>
             </div>
             <div class="reminder-input">
                 <div><input class="new-reminder" id="user-input" type="text"></div>
