--- a/code.html
+++ b/code.html
@@ -10,7 +10,7 @@
     <div class="outer-container">
         <div class="dropdown"></div>
         <div class="appname">
-            <h1>RemindME™</h1>
+            <h1>YourReminders™</h1>
         </div>
         <div class="redbox">
             <div class="display" id="display-div">Enter a Reminder</div>
